# factor

./: .gitignore  CMakeLists.txt
cmake/: Config.cmake  Config.linux  Config.linux.cmake  Config.linux.x86.64.cmake  Config.unix  Config.x86.64
extra/2048-game/: 2048-game-tests.factor  2048-game.factor  authors.txt
